[project]
name = "gdpval-template"
version = "0.1.0"
description = "HUD environment template for GDPval-style knowledge-work evaluations"
requires-python = ">=3.12,<3.13"
dependencies = [
    "hud-python[agents]>=0.6.6,<0.7",
    "fastmcp>=3,<4",
    "rubric==1.3.2",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "pypdf>=4.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[tool.uv]
package = false
