[project]
name = "hud-trace-explorer"
version = "0.1.0"
description = "HUD environment for exploring and analyzing trace data using coding tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hud-python>=0.6.5",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "fastmcp>=3,<4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "ruff==0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "env.py",
    "qa_common.py",
    "qa_failure_analysis.py",
    "qa_false_negative.py",
    "qa_false_positive.py",
    "qa_prompt_alignment.py",
    "qa_reward_hacking.py",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "env.py",
    "qa_common.py",
    "qa_failure_analysis.py",
    "qa_false_negative.py",
    "qa_false_positive.py",
    "qa_prompt_alignment.py",
    "qa_reward_hacking.py",
    "pyproject.toml",
    "README.md",
]

[tool.hud]
name = "yail-trace-explorer"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I", "C4", "UP"]
ignore = ["E501"]

[tool.pyright]
include = ["*.py"]
exclude = [
    "**/__pycache__",
    "**/.venv",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
